results/SVCOMP/4-shot/log-ExSymExeD2I-2024_03_18_20_06_31.txt
class Main {

  //@ requires x >= 0.0 && x <= Integer.MAX_VALUE / 2;
  //@ ensures \result <==> test(x);
  //@ ensures !\result ==> true;
  public static boolean f (double x) {
    if (x >= 0.0 && x <= Integer.MAX_VALUE / 2) {
      Main inst = new Main();
      return inst.test(x);
    }
    return true;
  }

  //@ requires true;
  //@ ensures \result ==> res > 0;
  //@ ensures !\result ==> false;
  public boolean test(double x) {

    int res = (int) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:4: error: non-static method test(double) cannot be referenced from a static context
  //@ ensures \result <==> test(x);
                           ^
/home/max/Documents/JMLGPT/tmp/ExSymExeD2I.java:15: error: cannot find symbol
  //@ ensures \result ==> res > 0;
                          ^
  symbol:   variable res
  location: class Main
2 errors

